--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,35 +1,29 @@
 stages:
   - mavenbuild
   - maventest
-  
-maven-build:            
-  stage: mavenbuild     # one of the stages listed above
-  tags:                 # to specify which runner to execute this job
-    - bo_tag    # change to your runner's tag
-  script:               # what to execute for this job
-    - cd Backend/gameFile/        # change 'Backend' to to where you have the pom.xml (do not add / in the beginning)
-    - mvn package       # maven package
-  artifacts:            # where to output the packaged jar file, change 'Backend' to to where you have the pom.xml
-    paths:
-    - Backend/gameFile/target/onetoone-1.0.0.jar
 
-  only:
-    refs:
-      - main            # only to trigger the pipeline when changes are pushed to 'main'
-    changes:
-      - Backend/gameFile/    # more specifically - only when changes are made inside the 'Backend' folder
-
-maven-test:             
-  stage: maventest     # one of the stages listed above
+maven-build:
+  stage: mavenbuild
   tags:
-    - bo_tag      # <-- change to your runner's tag
+    - bo_tag # <-- change to your runner's tag
   script:
-     - cd Backend/gameFile/      # change 'Backend' to to where you have the pom.xml (do not add / in the beginning)
-     - mvn test         # maven test
+    - cd Backend/gameFile/ # change 'Backend' to to where you have the pom.xml (do not add / in the beginning)
+    - mvn package
   only:
     refs:
       - bo_CICD
     changes:
       - Backend/gameFile/
 
-
+maven-test:
+  stage: maventest
+  tags:
+    - bo_tag # <-- change to your runner's tag
+  script:
+    - cd Backend/gameFile/ # change 'Backend' to to where you have the pom.xml (do not add / in the beginning)
+    - mvn test
+  only:
+    refs:
+      - bo_CICD
+    changes:
+      - Backend/gameFile/
